--- a/app/src/main/res/layout/recycleview_adapte_home.xml
+++ b/app/src/main/res/layout/recycleview_adapte_home.xml
@@ -17,6 +17,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="50dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="16dp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:id="@+id/textview_title"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/imageview_recycle_view_story"/>
@@ -94,6 +98,7 @@
         android:id="@+id/textview_liked"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="8dp"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@+id/imageview_message"
         app:layout_constraintLeft_toRightOf="@id/imageview_liked_photo"/>
 
